# ciencia-das-redes-utfpr

./: README.md
desafio-parte-1/: main.ipynb  pyproject.toml
desafio-parte-2/: description.ipynb  main.ipynb  pyproject.toml  resultados.csv
desafio-parte-2/data/: naiveCategoriesBaseline.py  randomBaseline.py
desafio-parte-2/kaggle_results/: resultados__0.82333.csv
exercicio-1/: README.md  city_relations.gml  city_relations.gml.gephi  main.py  pyproject.toml
exercicio-2/: GraphMissingEdges.gml.geph.gephi  erdos_graph.gml  main.ipynb  main.py  pyproject.toml
exercicio-3/: main.ipynb  pyproject.toml
exercicio-4/: main.ipynb  pyproject.toml
exercicio-4/.ipynb_checkpoints/: main-checkpoint.ipynb
exercicio-5/: Demonstração Pytorch.ipynb  Exercício Pytorch.ipynb  pyproject.toml
