[tool.poetry]
name = "desafio-parte-1"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"
packages = [{include = "desafio_parte_1"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
networkx = "^3.1"
pandas = "^2.0.0"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
geopy = "^2.3.0"
scipy = "^1.10.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
