[tool.poetry]
name = "desafio-parte-2"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"
packages = [{include = "desafio_parte_2"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
torch = "^2.0.0"
scikit-learn = "^1.2.2"
geopy = "^2.3.0"
pandas = "^2.0.1"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^23.3.0", extras = ["jupyter"]}
isort = "^5.12.0"
ruff = "^0.0.265"
nbqa = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
