[tool.poetry]
name = "exercicio-2"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.1"
networkx = "^3.0"
matplotlib = "^3.7.1"
ipython = "^8.11.0"
scipy = "^1.10.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
