[tool.poetry]
name = "exercicio-4"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
jupyter = "^1.0.0"
networkx = "^3.1"
python-louvain = "^0.16"
leidenalg = "^0.9.1"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pycairo = "^1.23.0"
cairocffi = "^1.5.0"
pandas = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

