[tool.poetry]
name = "exercicio-5"
version = "0.1.0"
description = ""
authors = ["Lucas Souto <lucassouto@protonmail.com>"]
readme = "README.md"
packages = [{include = "exercicio_5"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
torch = "^2.0.0"
pandas = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
